:lipstick: Update Avatar default scale, adjust z-index and style in SidebarLayout, and fix UserNav Avatar scaling

--- a/site/components/common/SidebarLayout/SidebarLayout.module.css
+++ b/site/components/common/SidebarLayout/SidebarLayout.module.css
@@ -5,12 +5,12 @@
 .header {
   @apply sticky top-0 pl-4 py-4 pr-6
   flex items-center justify-between 
-  bg-accent-0 box-border w-full z-10;
+  bg-accent-0 box-border w-full z-20;
   min-height: 66px;
 }
 
 .container {
-  @apply flex flex-col flex-1 box-border;
+  @apply flex flex-col flex-1 z-10 box-border pb-32;
 }
 
 @screen lg {
